Fix header menu visibility on mobile

--- a/src/styles/legacy/custom.scss
+++ b/src/styles/legacy/custom.scss
@@ -642,8 +642,8 @@ h3 {
 .header-type-default .menu > ul > li > a {
 	padding: 8px 16px;
 }
-.archive .veebipoodmenu a,
-.archive .veebipoodmenu a:hover {
+.archive .veebipoodmenu > a,
+.archive .veebipoodmenu > a:hover {
 	background-color: $color-red !important;
 	color: $color-white!important;
 }
