--- a/src/styles/legacy/responsive.scss
+++ b/src/styles/legacy/responsive.scss
@@ -2772,7 +2772,6 @@
 		line-height: 44px;
 	}
 	.et-menu-title i.icon-reorder {
-		color: $color-grey;
 		font-size: 36px;
 		transition: all 0.2s ease-in-out;
 	}
