--- a/src/styles/legacy/style.scss
+++ b/src/styles/legacy/style.scss
@@ -1533,11 +1533,7 @@ div.menu {
 	display: none;
 	z-index: 999;
 	padding: 0;
-	margin-top: -8px;
-}
-.default-menu > ul > li ul {
-	border-top-width: 1px;
-	border-top-style: solid;
+	margin-top: -9px;
 }
 .default-menu > ul > li > ul li {
 	display: block;
